--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.1.3 (14-Jul-2013):
+* 32-bit guest support fixed
+* fixed critical bug in previous version which caused pages
+  to be mapped with the wrong protection flags, leading to
+  immediate segfaults on write
+
 0.1.2 (4-Jul-2013):
 * updated following mirage-xen Gnttab API change
 
