--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.2.0 (17-Jul-2013):
+* blkback has significantly increased performance through
+  mapping all requests on the ring simultaneously
+
 0.1.3 (14-Jul-2013):
 * 32-bit guest support fixed
 * fixed critical bug in previous version which caused pages
