--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
-0.2.3 (trunk):
+0.2.3 (5-Oct-2013):
 * add Travis continuous integration scripts.
+* use new Activations.after interface
 
 0.2.2 (8-Aug-2013):
 * update to mirage-platform 0.9.4
