--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+trunk (unreleased)
+* fix reading non-page aligned sectors
+
 0.2.3 (5-Oct-2013):
 * add Travis continuous integration scripts.
 * use new Activations.after interface
