--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
-trunk (unreleased)
+0.2.5 (10-Nov-2013)
 * fix build against cstruct.0.8.0
+* blkfront write_page only needs to grant read access to
+  the backend driver
 
 0.2.4 (13-Oct-2013)
 * fix reading non-page aligned sectors
