--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.5.0 (8-Dec-2013)
+* Block.connect: if we don't recognise the id, default to the
+  first available disk.
+
 0.4.0 (8-Dec-2013)
 * implement new mirage-types BLOCK interface
 
