--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.1.0 (trunk):
+* blkback: functorise over Activations.
+* Depend on `xen-grant` and `xen-event` libraries rather than `xenctrl`.
+* Remove `OS` module, depend on `io-page` (no `-unix` or `-xen`).
+
 1.0.0 (10-Dec-2013):
 * Add ISC copyrights everywhere.
 * Indent code with `ocp-indent`.
