blkback: make destroy idempotent
We're probably racing with the toolstack, and it's ok to lose the
race.

Signed-off-by: David Scott <dave.scott@eu.citrix.com>

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 trunk (unreleased)
 * blkback: add 'force_close' to more forcibly tear down the device
+* blkback: make 'destroy' idempotent
 
 1.1.0 (30-Jan-2014):
 * blkback: functorise over Activations.
