--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ trunk (unreleased)
 * blkback: make 'destroy' idempotent
 * blkback: measure ring utilisation; segments per request; total
   requests and responses (ok and error)
+* blkback: support indirect descriptors (i.e. large block sizes)
 
 1.1.0 (30-Jan-2014):
 * blkback: functorise over Activations.
