--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+trunk (unreleased)
+* update to io-page.1.3.0
+* add an opam file for more convenient development
+* simplify travis configuration
+
 1.2.0 (3-Oct-2014)
 * blkback: add 'force_close' to more forcibly tear down the device
 * blkback: make 'destroy' idempotent
