--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.3.1 (07-Mar-2015)
+* Add an explicit `connect` to the interface signature (#35)
+
 1.3.0 (29-Jan-2015)
 * Update to `io-page.1.4.0` interface.
 * Add an `opam` 1.2 file for more convenient development.
